fixes text alignment

--- a/styles.css
+++ b/styles.css
@@ -557,7 +557,7 @@ footer div p:first-of-type {
         -ms-flex-direction: row-reverse;
             flex-direction: row-reverse;
     width: 50%;
-    text-align: justify;
+    text-align: right;
     margin-left: 16px;
     -webkit-transform: translateX(100vw);
             transform: translateX(100vw);
@@ -580,6 +580,7 @@ footer div p:first-of-type {
         -ms-flex-align: start;
             align-items: flex-start;
     padding: 0 0 0 1.5em;
+    text-align: left;
   }
   .skills-item:nth-child(2n) {
     -webkit-box-orient: horizontal;
